# rkern

./: Cargo.toml  README.md  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
src/: allocator.rs  fs.rs  gdt.rs  interrupts.rs  io.rs  lib.rs  main.rs  memory.rs  shell.rs  test.rs  vga_buffer.rs
src/allocator/: fixed_size_block.rs
src/interrupts/: handlers.rs  pic.rs
src/memory/: frame_allocator.rs
src/serial/: mod.rs  print.rs
src/shell/: clear.rs  echo.rs  history.rs
src/vga_buffer/: buffer.rs  color.rs  mod.rs  print.rs  writer.rs
tests/: basic_boot.rs  heap_allocations.rs  should_panic.rs  stack_overflow.rs
