[package]
name = "rkern"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.23" # Newest version does not compile
spin = "0.9.8"
volatile = "0.2.6"

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]
