[package]
name = "rkern"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 33

[[test]]
name = "should_panic"
harness = false
[[test]]
name = "stack_overflow"
harness = false


[dependencies]
bootloader = { version = "0.9.23", features = ["map_physical_memory"]}
pc-keyboard = "0.7.0"
pic8259 = "0.10.4"
spin = "0.9.8"
uart_16550 = "0.3.0"
volatile = "0.3.0"
x86_64 = "0.14.10"

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]
